--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -182,19 +182,20 @@ hr {
 table {
   border: 1px solid #373737;
   margin-bottom: 20px;
-  text-align: left;
+  text-align: center;
  }
 
 th {
   font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   padding: 10px;
-  background: #373737;
+  background: #373737
   color: #fff;
  }
 
 td {
   padding: 10px;
   border: 1px solid #373737;
+  text-align: center;
  }
 
 form {
@@ -212,7 +213,7 @@ Full-Width Styles
 
 .inner {
   position: relative;
-  max-width: 640px;
+  max-width: 800px;
   padding: 20px 10px;
   margin: 0 auto;
 }
