--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -188,8 +188,8 @@ table {
 th {
   font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   padding: 10px;
-  background: #373737
-  color: #fff;
+  background-color: #373737;
+  color: #ffffff;
  }
 
 td {
